# ZZ

./: .dockerignore  .env.example  .gitignore  Dockerfile  app_logging.py  body.json  combined_output.md  config.py  db.py  docker-compose.yml  main.py  pyproject.toml  test.html  test.py
auth_recovery_example/: email_sender.py  passwords.py  recovery_service.py  reset_tokens_repo.py  router.py
backend/: rate_limit.py
backend/auth/: __init__.py  dependencies.py  email_sender.py  jwt_service.py  models.py  recovery_service.py  reset_tokens_repo.py  router.py  schemas.py  token_service.py
backend/iiko_manager/: __init__.py  client.py  repository.py  service.py
backend/orders/: __init__.py  availability.py  branches.py  crud.py  depencises.py  iiko.py  migrations.py  models.py  router.py  schemas.py  service.py  statuses.py
backend/payment/: __init__.py  crud.py  depencises.py  models.py  router.py  schemas.py  service.py
backend/redactor/: __init__.py  crud.py  depencises.py  migrations.py  models.py  router.py  schemas.py  service.py
backend/user/: __init__.py  crud.py  depencises.py  migrations.py  models.py  router.py  schemas.py  service.py
deploy/nginx/: zamzam96.ru.conf
files/: hero-content.json
files/legal/: oferta.txt  politic.txt
for_auth/: auth_service.py  dependency.py  jwt_service.py  models.py  router.py  schemas.py  telegram_auth.py
for_payment/: payment.py
ideal/: test.html
static/: account.js  app.js  auth-bridge.js  catalog-admin.js  checkout-bridge.js  orders-admin.js  styles.css
templates/: index.html  oferta.html  policy.html
