[project]
name = "zamzam"
version = "0.1.0"
description = "Одностраничный премиальный сайт ресторана доставки на FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.35.0",
]
